# village

./: LICENSE.txt  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml
auth0/: post-registration-action.ts
cli/: .depcheckrc  .env.development  .env.production  .gitignore  generate.ts  openapi.json  package.json  tsconfig.json
cli-rs/: .gitignore  Cargo.toml  Makefile
cli-rs/.cargo/: config.toml
cli-rs/src/: main.rs
cli-rs/src/cli/: deploy.rs  init.rs  login.rs  logout.rs  mod.rs  token.rs
cli-rs/src/lib/: auth.rs
cli/src/: build.ts  config.ts  index.ts
cli/src/commands/: build_run.ts  deploy.ts  deploy_aws.ts  init.ts  login.ts  logout.ts  remove.ts  run.ts  run_aws.ts  setup.ts  token.ts  userinfo.ts  workspace.ts  workspaces.ts
cli/src/commands/list/: builds.ts  list.ts  runs.ts  schedules.ts  scripts.ts  workspaces.ts
cli/src/common/: auth.ts  configFile.ts  dates.ts  types.ts  villageClient.ts
docker/: .env  compose-dev.yml  frontend-dev.yml  server-dev.yml
docs/: README.md  docusaurus.config.js  openapi.yaml  package.json
example_scripts/custom-python-image/: main.py  village.yaml
example_scripts/fib/: main.py  village.yaml
example_scripts/hello-node/: package.json  village.yaml
example_scripts/node-dependencies/: index.js  package.json  village.yaml
example_scripts/python-dependencies/: main.py  village.yaml
frontend/: .depcheckrc  .dockerignore  .env.development  .eslintrc  .gitignore  Dockerfile  generate.ts  index.html  openapi.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  config.ts  env.d.ts  main.tsx  svg.d.ts
frontend/src/common/: VillageClient.tsx  dates.ts
frontend/src/components/: Auth0ProviderWithHistory.tsx  Input.tsx  ListDropdown.tsx  LoginButton.tsx  LogoutButton.tsx  Params.tsx  ProtectedRoute.tsx  Select.tsx  Table.tsx  Textarea.tsx
frontend/src/components/Dashboard/: Layout.tsx  Navbar.tsx  ProfileButton.tsx  Sidebar.tsx  WorkspaceListBox.tsx
frontend/src/components/EmptyStates/: NoBuildResults.tsx  NoBuilds.tsx  NoRunResults.tsx  NoRuns.tsx  NoScheduleResults.tsx  NoSchedules.tsx  NoScriptResults.tsx  NoScripts.tsx
frontend/src/contexts/: UserContext.tsx
frontend/src/hooks/: useOnClickOutside.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  NotFound.tsx  PageLoading.tsx
frontend/src/pages/Dashboard/: Build.tsx  NewSchedule.tsx  NewScript.tsx  NewWorkspace.tsx  Profile.tsx  Run.tsx  RunScript.tsx  Runs.tsx  Schedule.tsx  Schedules.tsx  Script.tsx  Scripts.tsx  Settings.tsx  Users.tsx  Workflows.tsx
frontend/src/utils/: debounce.ts  links.ts
server/: .gitignore  Dockerfile  Makefile  config.py  main.py  pyproject.toml  schema.prisma  worker.py
server/models/: config.py  params.py  prisma_partials.py
server/routers/: builds.py  invites.py  runs.py  schedules.py  scripts.py  slack.py  users.py  workspaces.py
server/sdk/: shim.js  shim.py
server/server/: docker.py
server/utils/: ids.py  index.py
