[package]
name = "cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { version = "0.1.0", path = "api" }
clap = { version = "3.2.21", features = ["derive"] }
dirs = "4.0.0"
reqwest = {version = "0.11.11", features=["blocking", "json"]}
serde = {version="1.0.144",features=["derive"]}
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
