[package]
name = "village"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { version = "0.1.0", path = "api" }
clap = { version = "3.2.21", features = ["derive"] }
dirs = "4.0.0"
flate2 = "1.0.24"
globset = "0.4.9"
globwalk = "0.8.1"
pathdiff = "0.2.1"
reqwest = {version = "0.11.11", features=["blocking", "json", "multipart", "stream"]}
serde = {version="1.0.144",features=["derive"]}
serde_json = "1.0.85"
tar = "0.4.38"
tempfile = "3.3.0"
tokio = { version = "1.21.1", features = ["full"] }
yaml-rust = "0.4.5"
tokio-util = { version = "0.7.3", features = ["codec"] }
serde_yaml = "0.9.13"
base64 = "0.13.0"
chrono = "0.4.22"
